--- a/EverythingInCoreData/Base.lproj/Main.storyboard
+++ b/EverythingInCoreData/Base.lproj/Main.storyboard
@@ -43,16 +43,35 @@
                                     <action selector="loginClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HjI-C6-oLr"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="70b-Z8-XOU">
+                                <rect key="frame" x="157.5" y="348" width="70" height="40"/>
+                                <color key="backgroundColor" red="0.89762452410000004" green="0.15371473090000001" blue="0.1357239187" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="93f-gE-ias"/>
+                                    <constraint firstAttribute="height" constant="40" id="Uye-lv-p3x"/>
+                                </constraints>
+                                <state key="normal" title="Sign up">
+                                    <color key="titleColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="loginClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nw0-fy-7PE"/>
+                                    <action selector="signUpClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4W1-oB-smE"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Yp-L4-4p1" firstAttribute="top" secondItem="h38-0t-NSY" secondAttribute="bottom" constant="30" id="0Wi-ve-8R0"/>
+                            <constraint firstItem="70b-Z8-XOU" firstAttribute="centerX" secondItem="6Yp-L4-4p1" secondAttribute="centerX" id="1yo-HG-2dT"/>
                             <constraint firstItem="Cj4-i5-zns" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="9FZ-EY-70U"/>
                             <constraint firstItem="h38-0t-NSY" firstAttribute="trailing" secondItem="Cj4-i5-zns" secondAttribute="trailing" id="AZj-KE-9Mc"/>
+                            <constraint firstItem="70b-Z8-XOU" firstAttribute="height" secondItem="6Yp-L4-4p1" secondAttribute="height" id="Hqx-vr-xxn"/>
                             <constraint firstItem="h38-0t-NSY" firstAttribute="leading" secondItem="Cj4-i5-zns" secondAttribute="leading" id="Iuv-cK-7ur"/>
                             <constraint firstItem="6Yp-L4-4p1" firstAttribute="centerX" secondItem="h38-0t-NSY" secondAttribute="centerX" id="Msf-6E-YmV"/>
                             <constraint firstItem="Cj4-i5-zns" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="flq-zW-Yuq"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Cj4-i5-zns" secondAttribute="trailing" constant="30" id="jkJ-3c-qlp"/>
+                            <constraint firstItem="70b-Z8-XOU" firstAttribute="width" secondItem="6Yp-L4-4p1" secondAttribute="width" id="mi5-I4-rBa"/>
+                            <constraint firstItem="70b-Z8-XOU" firstAttribute="top" secondItem="6Yp-L4-4p1" secondAttribute="bottom" constant="30" id="rKL-Yr-bPq"/>
                             <constraint firstItem="h38-0t-NSY" firstAttribute="top" secondItem="Cj4-i5-zns" secondAttribute="bottom" constant="24" id="uuF-dz-2iw"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -127,7 +146,84 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cKV-PQ-sce" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2580" y="26.53673163418291"/>
+            <point key="canvasLocation" x="2383" y="32"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ieo-7q-KZ2">
+            <objects>
+                <viewController id="15a-vc-bL3" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jih-9R-XU8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xhv-rK-tK1">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tqW-5n-VlK">
+                                        <rect key="frame" x="10" y="20" width="357" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="88n-1u-E1J"/>
+                                            <constraint firstAttribute="width" constant="357" id="UeO-iG-gKw"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CWy-Hj-2kU">
+                                        <rect key="frame" x="10" y="65" width="357" height="25"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qFX-Oz-f4z">
+                                        <rect key="frame" x="10" y="110" width="357" height="25"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NE7-8G-8qt">
+                                        <rect key="frame" x="10" y="155" width="357" height="25"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mv3-sf-9dK">
+                                        <rect key="frame" x="10" y="200" width="357" height="25"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="qFX-Oz-f4z" firstAttribute="top" secondItem="CWy-Hj-2kU" secondAttribute="bottom" constant="20" id="5qN-Je-1fm"/>
+                                    <constraint firstItem="CWy-Hj-2kU" firstAttribute="top" secondItem="tqW-5n-VlK" secondAttribute="bottom" constant="20" id="7ie-U1-zIx"/>
+                                    <constraint firstItem="tqW-5n-VlK" firstAttribute="top" secondItem="Xhv-rK-tK1" secondAttribute="top" constant="20" id="AIw-zi-lGo"/>
+                                    <constraint firstItem="NE7-8G-8qt" firstAttribute="trailing" secondItem="qFX-Oz-f4z" secondAttribute="trailing" id="BCl-Ik-iqs"/>
+                                    <constraint firstItem="CWy-Hj-2kU" firstAttribute="height" secondItem="tqW-5n-VlK" secondAttribute="height" id="LAi-cZ-mRM"/>
+                                    <constraint firstItem="CWy-Hj-2kU" firstAttribute="leading" secondItem="tqW-5n-VlK" secondAttribute="leading" id="Mbn-3N-IH1"/>
+                                    <constraint firstItem="mv3-sf-9dK" firstAttribute="leading" secondItem="NE7-8G-8qt" secondAttribute="leading" id="NBZ-yo-2n2"/>
+                                    <constraint firstItem="qFX-Oz-f4z" firstAttribute="trailing" secondItem="CWy-Hj-2kU" secondAttribute="trailing" id="QD8-NZ-CdV"/>
+                                    <constraint firstItem="CWy-Hj-2kU" firstAttribute="trailing" secondItem="tqW-5n-VlK" secondAttribute="trailing" id="Qgu-Wn-pBr"/>
+                                    <constraint firstItem="NE7-8G-8qt" firstAttribute="leading" secondItem="qFX-Oz-f4z" secondAttribute="leading" id="RYC-Me-3gm"/>
+                                    <constraint firstItem="mv3-sf-9dK" firstAttribute="top" secondItem="NE7-8G-8qt" secondAttribute="bottom" constant="20" id="Vbk-53-zJd"/>
+                                    <constraint firstItem="tqW-5n-VlK" firstAttribute="leading" secondItem="Xhv-rK-tK1" secondAttribute="leading" constant="10" id="WvK-P4-zTn"/>
+                                    <constraint firstItem="mv3-sf-9dK" firstAttribute="height" secondItem="NE7-8G-8qt" secondAttribute="height" id="Zwu-37-wTn"/>
+                                    <constraint firstItem="NE7-8G-8qt" firstAttribute="top" secondItem="qFX-Oz-f4z" secondAttribute="bottom" constant="20" id="avS-7c-tRT"/>
+                                    <constraint firstItem="qFX-Oz-f4z" firstAttribute="leading" secondItem="CWy-Hj-2kU" secondAttribute="leading" id="cZx-YC-fKM"/>
+                                    <constraint firstAttribute="trailing" secondItem="tqW-5n-VlK" secondAttribute="trailing" constant="8" id="doO-U6-fZM"/>
+                                    <constraint firstItem="qFX-Oz-f4z" firstAttribute="height" secondItem="CWy-Hj-2kU" secondAttribute="height" id="l5K-be-M40"/>
+                                    <constraint firstItem="mv3-sf-9dK" firstAttribute="trailing" secondItem="NE7-8G-8qt" secondAttribute="trailing" id="u3b-ot-APb"/>
+                                    <constraint firstItem="NE7-8G-8qt" firstAttribute="height" secondItem="qFX-Oz-f4z" secondAttribute="height" id="yoo-bm-7xo"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="n5v-0F-aB1"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jUT-E7-C3z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3213.5999999999999" y="31.934032983508249"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vQE-nH-ODa">
